2009-11-04  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#144761 - Transition tweaks
	
	* data/transitions.ini: Added MartinG's tweaked transition values

2009-11-04  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.113-1

2009-11-04  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#144265 - Dialog titles disappear when closing
	* src/mb/hd-decor.c: Just unref actors when the decor is destroyed
	  rather than destroying them. They will be destroyed when the
	  CompMgrClutterClient's actor is finally unreffed.

	Minor regression fix for NB#143482 - Software selection
	(Clutter Warning and lack of 'No Items' label in launcher)
	* src/launcher/hd-launcher-page.c: Replace set_parent with
	  container_add_actor (and remove other needless set_parent)

2009-11-04  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Fixes: NB#142332 - [ncfs] No notification previews available in full
	screen mode
	Fixes: NB#142140 - [non composite mode] Ugly flickering when opening
	dialogs in full screen
	Fixes: NB#142322 - [ncfs] No transitions in full screen mode

	* src/home/hd-render-manager.h: Don't discard preview notes in
	non-composited mode.
	* hd-comp-mgr.[ch] (hd_comp_mgr_reconsider_compositing): New function
	for compositing mode policy.
	(hd_comp_mgr_unmap_notify): Move compositing mode policy code away
	from here to hd_comp_mgr_reconsider_compositing.
	(hd_comp_mgr_map_notify): Remove some unredirecting code.
	(hd_comp_mgr_client_looks_better_composited): New function to detect
	clients that look prettier in composited mode.
	(hd_comp_mgr_client_needs_compositing): Preview notes are now
	requiring compositing.
	* src/mb/hd-note.c (hd_note_init, hd_note_request_geometry): No
	special treatment for non-composited modes anymore.
	* src/util/hd-dbus.c (hd_dbus_system_bus_signal_handler): Clear the
	overlay window before exiting to prevent its contents staying on the
	root window.
	* src/util/hd-transition.c (hd_transition_completed): Call